# Redx_regressors_os

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yaml  testing.yaml
Docker/: Dockerfile_tmap
docs/: readme.md
docs/docs/redxregressors/: applicability_domain.md  classical_ml_models.md  datasets.md  deep_net_models.md  evaluate.md  graph_models.md  index.md  ml_featurization.md  ml_flow_funcs.md  preprocess.md  transformer_models.md  tune.md  utilities.md
docs/site/: applicability_domain.html  classical_ml_models.html  datasets.html  deep_net_models.html  evaluate.html  graph_models.html  index.html  ml_featurization.html  ml_flow_funcs.html  preprocess.html  transformer_models.html  tune.html  utilities.html
notebooks/: readme.md
src/redxregressors/: __init__.py  applicability_domain.py  classical_ml_models.py  datasets.py  deep_net_models.py  evaluate.py  graph_models.py  ml_featurization.py  ml_flow_funcs.py  preprocess.py  tune.py  utilities.py
tests/: test_applicability_domain.py  test_classical_ml_models.py  test_deep_net_models.py  test_evaluate.py  test_example.py  test_featurization.py  test_graph_models.py  test_preprocess.py  test_tune.py  test_utilities.py
