[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63.2.0",
    "wheel>=0.37.1",
]

[project]
name = "redxregressors"
version = "0.0.1"
license = {file = "LICENSE"}
authors = [
    {name = "James L. McDonagh"},
]
description = "This repository contains a library for building and optimizing regression models and notebooks for the use of the library"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]

# The versions set are the ones used for the original install on Mac OS so should work if pinned to only those versions i.e. >= --> ==
dependencies = [
    "numpy>=1.24.4",
    "pytest>=7.4.4",
    "pandas>=2.0.0",
    "pre-commit>=3.5.0",
    "jax>=0.4.1",
    "torch>=2.2.1",
    "tensorflow>=2.17.0",
    "scikit-learn>=1.5.1",
    "pdocs>=1.2.0",
    "transformers>=4.44.2",
    "optuna>=4.0.0",
    "mlxtend>=0.23.1",
    "dm-haiku>=0.0.12",
    "xgboost>=2.1.1",
    "lightgbm>=4.5.0",
    "deepchem>=2.8.0",
    "mlflow>=2.16.2",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.1.1",
    "tf-keras>=2.17.0",
    "kaleido>=0.2.1",
    "statsmodels>=0.14.2",
    "torch-geometric>=2.6.1",
    "pysmiles>=1.1.2",
]
